# python-project-83

./: .gitignore  Makefile  README.md  pyproject.toml
page_analyzer/: app.py
page_analyzer/templates/: index.html
tests/: test_dummy.py
